--- a/001_sphere_fitting/sphere_fitting.ipynb
+++ b/001_sphere_fitting/sphere_fitting.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a1ebc4a4",
+   "id": "cad2d3ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "983c65a2",
+   "id": "7570b1b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6dce75c0",
+   "id": "b08ad8df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "68b4cf6b",
+   "id": "4cc481b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0c445cb0",
+   "id": "18d36340",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9d43fab8",
+   "id": "3ffb747a",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "42ebabe4",
+   "id": "d7b71f52",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "42ae66ea",
+   "id": "b0a04bc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "edb9de23",
+   "id": "03c8de25",
    "metadata": {},
    "outputs": [
     {
@@ -170,8 +170,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "8937f74c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "8eae5cf7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.11.4'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scipy.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b55001c0",
+   "id": "92732c29",
    "metadata": {},
    "outputs": [],
    "source": []
